--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="assets/game.js"></script>
 	
@@ -10,20 +11,31 @@
 <body>
 
 
-
+Random Number Generated
 <h1 id="randomNumber"></h1>
 
-
-<button name="crytsalOne" id="crytsalOne">cyrstal one</h1>
-<button name="crytsaltwo" id="crytsaltwo">cyrstal Two</h1>
-<button name="crytsalThree" id="crytsalThree">cyrstal Three</h1>
-<button name="crystalFour" id="crystalFour">cyrstal four</h1>
-
+Wins
 <h2 id="wins"></h2>
-<h2 id="losses"></h2>
-<h2 id="total score"></h2>
-<h2 id="userScore"></h2>
 
+Looses
+<h2 id="losses"></h2>
+
+<div>
+<button type="button" class="btn btn-primary" id="crytsalOne">cyrstal one</button>
+<button type="button" class="btn btn-primary" id="crytsalTwo">cyrstal Two</button>
+<button type="button" class="btn btn-primary" id="crytsalThree">cyrstal Three</button>
+<button type="button" class="btn btn-primary" id="crytsalFour">cyrstal four</button>
+
+
+<br>
+
+
+
+
+Total score
+<h2 id="totalScore"></h2>
+<!-- <h2 id="userScore"></h2> unsure if I need this 
+ -->
 
 </body>
 </html>
