added css to page

--- a/index.html
+++ b/index.html
@@ -1,41 +1,106 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="assets/game.js"></script>
 	
 		<title>Crystal Counter</title>
 </head>
 <body>
 
+<div class="jumbotron">
+  	<div class="container">
+		<h1>Potion Counter</h1>
+		
+		        <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+</button>
 
-Random Number Generated
-<h1 id="randomNumber"></h1>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+        
 
-Wins
-<h2 id="wins"></h2>
-
-Looses
-<h2 id="losses"></h2>
-
-<div>
-<button type="button" class="btn btn-primary" id="crytsalOne">cyrstal one</button>
-<button type="button" class="btn btn-primary" id="crytsalTwo">cyrstal Two</button>
-<button type="button" class="btn btn-primary" id="crytsalThree">cyrstal Three</button>
-<button type="button" class="btn btn-primary" id="crytsalFour">cyrstal four</button>
 
 
-<br>
+
+	</div>	
+</div>
 
 
 
 
-Total score
-<h2 id="totalScore"></h2>
-<!-- <h2 id="userScore"></h2> unsure if I need this 
- -->
+
+
+
+
+
+<div class="row">
+	<div class="col-md-12">
+		<h1>Random Number Generated</h1>
+		<h1 id="randomNumber"></h1>
+	</div>
+</div>
+<div class="row">
+	<div class="imgCenter col-md-12">
+		<img id="crytsalOne" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 2.jpg" alt="potion 1">
+		<img id="crytsalTwo" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 3.jpg" alt="potion 2">
+		<img id="crytsalThree" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions.jpg" alt="potion 3">
+		<img id="crytsalFour" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 5.jpg" alt="potion 4">
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<h2>Total score</h2>
+		<h2 id="totalScore"></h2>
+	</div>
+	<div class="col-md-6">
+		<h2>Wins</h2>
+		<h2 id="wins"></h2>
+		<h2>Looses</h2>
+		<h2 id="losses"></h2>
+	</div>
+</div>
+
+
+
+
+<!-- <div class="footerDiv">
+<footer></footer>
+</div> -->
+	
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
