--- a/index.html
+++ b/index.html
@@ -2,49 +2,37 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/reset.css">
+
+	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:900" rel="stylesheet">
+
+	<!--  -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="assets/game.js"></script>
 	
-		<title>Crystal Counter</title>
+		<title>Potion Counter</title>
 </head>
 <body>
 
-<div class="jumbotron">
-  	<div class="container">
+<div class="jumbotron" id="jumbotronTest">
+  	<div class="title container">
 		<h1>Potion Counter</h1>
-		
-		        <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-        
-
-
-
-
 	</div>	
+</div>
+
+<div class="text-center instructionsDiv">
+	<button class="btn btn-default" id="btnInstr">Click Here for instructions</button>
+</div>
+<div id="instructions">
+	<p>You will be given a random number at the start of the game</p>
+	<p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score</p>
+	<p>You win the game by matching your total score to the random number, you loose the game if your score goes above the random number</p>
+	<p>The value of each crystal is hidden fro you until you click on it</p>
+	<p>Each time when the game starts, the game will change the valeus of each crystal</p>
+	
+
+
 </div>
 
 
@@ -58,50 +46,40 @@
 <div class="row">
 	<div class="col-md-12">
 		<h1>Random Number Generated</h1>
-		<h1 id="randomNumber"></h1>
+		<h1 class="numberBorders" id="randomNumber"></h1>
 	</div>
 </div>
 <div class="row">
 	<div class="imgCenter col-md-12">
-		<img id="crytsalOne" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 2.jpg" alt="potion 1">
-		<img id="crytsalTwo" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 3.jpg" alt="potion 2">
-		<img id="crytsalThree" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions.jpg" alt="potion 3">
-		<img id="crytsalFour" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 5.jpg" alt="potion 4">
+		<div class="crystalGroup">
+			<img id="crytsalOne" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 2.jpg" alt="potion 1">
+			<img id="crytsalTwo" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 3.jpg" alt="potion 2">
+			<img id="crytsalThree" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions.jpg" alt="potion 3">
+			<img id="crytsalFour" src="assets/images/depositphotos_12428580-stock-illustration-sticker-with-potions 5.jpg" alt="potion 4">
+		</div>
 	</div>
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<h2>Total score</h2>
-		<h2 id="totalScore"></h2>
+		<div class="scoreBoxesTotalScore">
+			<h2>Total score</h2>
+			<h2 class="numberBorders" id="totalScore"></h2>
+		</div>
 	</div>
 	<div class="col-md-6">
-		<h2>Wins</h2>
-		<h2 id="wins"></h2>
-		<h2>Looses</h2>
-		<h2 id="losses"></h2>
+		<div class="scoreBoxes"> 
+			<h2>Wins</h2>
+			<h2 class="numberBorders" id="wins"></h2>
+			<h2>Looses</h2>
+			<h2 class="numberBorders" id="losses"></h2>
+		</div>
 	</div>
 </div>
 
 
 
 
-<!-- <div class="footerDiv">
-<footer></footer>
-</div> -->
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
+<script src="assets/game.js"></script>
 </body>
 </html>
 
