--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="scoreBoxes"> 
 			<h2>Wins</h2>
 			<h2 class="numberBorders" id="wins"></h2>
-			<h2>Looses</h2>
+			<h2>Losses</h2>
 			<h2 class="numberBorders" id="losses"></h2>
 		</div>
 	</div>
