--- a/index.html
+++ b/index.html
@@ -26,22 +26,11 @@
 </div>
 <div id="instructions">
 	<p>You will be given a random number at the start of the game</p>
-	<p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score</p>
+	<p>There are four Potions below. By clicking on a Potion you will add a specific amount of points to your total score</p>
 	<p>You win the game by matching your total score to the random number, you loose the game if your score goes above the random number</p>
-	<p>The value of each crystal is hidden fro you until you click on it</p>
-	<p>Each time when the game starts, the game will change the valeus of each crystal</p>
-	
-
-
+	<p>The value of each Potion is hidden from you until you click on it</p>
+	<p>Each time when the game starts, the game will change the values of each crystal</p>
 </div>
-
-
-
-
-
-
-
-
 
 <div class="row">
 	<div class="col-md-12">
