--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Londrina+Solid" rel="stylesheet"> 
 
 	<!--  -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
