--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="jumbotron" id="jumbotronTest">
-  	<div class="title container">
+  	<div id="title" class="container">
 		<h1>Potion Counter</h1>
 	</div>	
 </div>
