Final push before submission

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
 <div class="jumbotron" id="jumbotronTest">
-  	<div id="title" class="container">
-		<h1>Potion Counter</h1>
+  	<div class="container">
+		<h1 id="title">Potion Counter</h1>
 	</div>	
 </div>
 
@@ -30,23 +30,14 @@
 <div id="instructions">
 	<p>You will be given a random number at the start of the game</p>
 	<p>There are four Potions below. By clicking on a Potion you will add a specific amount of points to your total score</p>
-	<p>You win the game by matching your total score to the random number, you loose the game if your score goes above the random number</p>
-<<<<<<< HEAD
-	<p>The value of each crystal is hidden fro you until you click on it</p>
-	<p>Each time when the game starts, the game will change the valeus of each crystal</p>
-	
-</div>
-
-
-=======
+	<p>You win the game by matching your total score to the random number, you lose the game if your score goes above the random number</p>
 	<p>The value of each Potion is hidden from you until you click on it</p>
-	<p>Each time when the game starts, the game will change the values of each crystal</p>
+	<p>Each time when the game starts, the game will change the values of each Potion</p>
 </div>
 
->>>>>>> f017f2100705dbad44f4ce5242442500f6aa91d5
 <div class="row">
 	<div class="col-md-12">
-		<h1>Random Number Generated</h1>
+		<h1 id="headerStyle">Random Number Generated</h1>
 		<h1 class="numberBorders" id="randomNumber"></h1>
 	</div>
 </div>
@@ -63,15 +54,15 @@
 <div class="row">
 	<div class="col-md-6">
 		<div class="scoreBoxesTotalScore">
-			<h2>Total score</h2>
+			<h2 id="headerStyle">Total score</h2>
 			<h2 class="numberBorders" id="totalScore"></h2>
 		</div>
 	</div>
 	<div class="col-md-6">
 		<div class="scoreBoxes"> 
-			<h2>Wins</h2>
+			<h2 id="headerStyle">Wins</h2>
 			<h2 class="numberBorders" id="wins"></h2>
-			<h2>Losses</h2>
+			<h2 id="headerStyle">Losses</h2>
 			<h2 class="numberBorders" id="losses"></h2>
 		</div>
 	</div>
